--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,5 @@
-app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
+core:
+    resource: "@CoreBundle/Resources/config/routing.yml"
+    prefix:   /
+
+
