--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "friendsofsymfony/user-bundle": "~2.0@dev"
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "twig/extensions": "^1.3",
+        "symfony/intl": "2.8.x-dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
