--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,10 @@
+admin:
+    resource: "@AdminBundle/Resources/config/routing.yml"
+    prefix:   /admin
+
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
 core:
     resource: "@CoreBundle/Resources/config/routing.yml"
     prefix:   /
